--- a/src/explore.ipynb
+++ b/src/explore.ipynb
@@ -4077,7 +4077,8 @@
                 "sns.regplot(ax = axis[2, 0], data = df, x = \"previous\", y = \"duration\")\n",
                 "sns.heatmap(df[[\"duration\", \"previous\"]].corr(), annot = True, fmt = \".2f\", ax = axis[3, 0], cbar = False)\n",
                 "\n",
-                "plt.show"
+                "plt.show\n",
+                "\n"
             ]
         }
     ],
