--- a/src/explore.ipynb
+++ b/src/explore.ipynb
@@ -4118,7 +4118,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": null,
+            "execution_count": 53,
             "metadata": {},
             "outputs": [],
             "source": [
@@ -4190,23 +4190,92 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 51,
+            "execution_count": 54,
             "metadata": {},
             "outputs": [
                 {
-                    "ename": "TypeError",
-                    "evalue": "'DataFrame' object is not callable",
+                    "data": {
+                        "text/plain": [
+                            "count    3140.000000\n",
+                            "mean       13.073503\n",
+                            "std         2.724351\n",
+                            "min         6.100000\n",
+                            "25%        11.200000\n",
+                            "50%        12.800000\n",
+                            "75%        14.800000\n",
+                            "max        25.600000\n",
+                            "Name: diabetes_prevalence, dtype: float64"
+                        ]
+                    },
+                    "execution_count": 54,
+                    "metadata": {},
+                    "output_type": "execute_result"
+                }
+            ],
+            "source": [
+                "df2['diabetes_prevalence'].describe()"
+            ]
+        },
+        {
+            "cell_type": "code",
+            "execution_count": 57,
+            "metadata": {},
+            "outputs": [
+                {
+                    "data": {
+                        "text/plain": [
+                            "0"
+                        ]
+                    },
+                    "execution_count": 57,
+                    "metadata": {},
+                    "output_type": "execute_result"
+                }
+            ],
+            "source": [
+                "df.isnull().sum().sum()"
+            ]
+        },
+        {
+            "cell_type": "code",
+            "execution_count": 61,
+            "metadata": {},
+            "outputs": [
+                {
+                    "ename": "ImportError",
+                    "evalue": "cannot import name 'tarin_test_split' from 'sklearn.model_selection' (c:\\Users\\valen\\anaconda3\\Lib\\site-packages\\sklearn\\model_selection\\__init__.py)",
                     "output_type": "error",
                     "traceback": [
                         "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-                        "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-                        "Cell \u001b[1;32mIn[51], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m df2(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mdiabetes_prevalence\u001b[39m\u001b[38;5;124m'\u001b[39m)\u001b[38;5;241m.\u001b[39mdescribe()\n",
-                        "\u001b[1;31mTypeError\u001b[0m: 'DataFrame' object is not callable"
+                        "\u001b[1;31mImportError\u001b[0m                               Traceback (most recent call last)",
+                        "Cell \u001b[1;32mIn[61], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01msklearn\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mmodel_selection\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m tarin_test_split\n\u001b[0;32m      3\u001b[0m x\u001b[38;5;241m=\u001b[39mdf2\u001b[38;5;241m.\u001b[39mdrop([\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mdiabetes_prevalence\u001b[39m\u001b[38;5;124m'\u001b[39m],axis\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m1\u001b[39m)\n\u001b[0;32m      4\u001b[0m y\u001b[38;5;241m=\u001b[39mdf2[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mdiabetes_prevalence\u001b[39m\u001b[38;5;124m'\u001b[39m]\n",
+                        "\u001b[1;31mImportError\u001b[0m: cannot import name 'tarin_test_split' from 'sklearn.model_selection' (c:\\Users\\valen\\anaconda3\\Lib\\site-packages\\sklearn\\model_selection\\__init__.py)"
                     ]
                 }
             ],
             "source": [
-                "df2('diabetes_prevalence').describe()"
+                "from sklearn.model_selection import tarin_test_split\n",
+                "\n",
+                "x=df2.drop(['diabetes_prevalence'],axis=1)\n",
+                "y=df2['diabetes_prevalence']\n",
+                "\n",
+                "X_train, X_test, Y_train, Y_test= train_test_split(x,y,test_size=0.2,random_state=42)\n",
+                "\n",
+                "X_train"
+            ]
+        },
+        {
+            "cell_type": "code",
+            "execution_count": null,
+            "metadata": {},
+            "outputs": [],
+            "source": [
+                "from sklearn.linear_model import LinearRegression,Lasso,Ridge\n",
+                "\n",
+                "model_rl=LinearRegression()\n",
+                "model_lasso= Lasso()\n",
+                "modelo_ridge=Ridge()\n",
+                "\n"
             ]
         }
     ],
