--- a/src/explore.ipynb
+++ b/src/explore.ipynb
@@ -9,7 +9,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 1,
+            "execution_count": 35,
             "metadata": {},
             "outputs": [
                 {
@@ -408,7 +408,7 @@
                             "[3140 rows x 108 columns]"
                         ]
                     },
-                    "execution_count": 1,
+                    "execution_count": 35,
                     "metadata": {},
                     "output_type": "execute_result"
                 }
@@ -422,7 +422,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 2,
+            "execution_count": 36,
             "metadata": {},
             "outputs": [
                 {
@@ -443,7 +443,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 3,
+            "execution_count": 37,
             "metadata": {},
             "outputs": [
                 {
@@ -842,7 +842,7 @@
                             "[3140 rows x 108 columns]"
                         ]
                     },
-                    "execution_count": 3,
+                    "execution_count": 37,
                     "metadata": {},
                     "output_type": "execute_result"
                 }
@@ -853,7 +853,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 4,
+            "execution_count": 38,
             "metadata": {},
             "outputs": [
                 {
@@ -874,7 +874,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 5,
+            "execution_count": 39,
             "metadata": {},
             "outputs": [
                 {
@@ -935,7 +935,7 @@
                             "freq            31        254"
                         ]
                     },
-                    "execution_count": 5,
+                    "execution_count": 39,
                     "metadata": {},
                     "output_type": "execute_result"
                 }
@@ -946,7 +946,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 6,
+            "execution_count": 40,
             "metadata": {},
             "outputs": [
                 {
@@ -970,7 +970,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 7,
+            "execution_count": 41,
             "metadata": {},
             "outputs": [],
             "source": [
@@ -979,7 +979,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 8,
+            "execution_count": 42,
             "metadata": {},
             "outputs": [
                 {
@@ -1018,7 +1018,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 9,
+            "execution_count": 43,
             "metadata": {},
             "outputs": [
                 {
@@ -1040,7 +1040,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 10,
+            "execution_count": 44,
             "metadata": {},
             "outputs": [
                 {
@@ -3773,7 +3773,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 11,
+            "execution_count": 45,
             "metadata": {},
             "outputs": [
                 {
@@ -3793,7 +3793,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 12,
+            "execution_count": 46,
             "metadata": {},
             "outputs": [
                 {
@@ -3824,7 +3824,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 34,
+            "execution_count": 47,
             "metadata": {},
             "outputs": [
                 {
@@ -3833,7 +3833,7 @@
                             "['fips',\n",
                             " 'TOT_POP',\n",
                             " '0-9',\n",
-                            " '0-9 total pop',\n",
+                            " '0-9 y/o % of total pop',\n",
                             " '19-Oct',\n",
                             " '10-19 y/o % of total pop',\n",
                             " '20-29',\n",
@@ -3937,12 +3937,10 @@
                             " 'CKD_Lower 95% CI',\n",
                             " 'CKD_Upper 95% CI',\n",
                             " 'CKD_number',\n",
-                            " 'Urban_rural_code',\n",
-                            " 'COUNTY_NAME_num',\n",
-                            " 'STATE_NAME_num']"
+                            " 'Urban_rural_code']"
                         ]
                     },
-                    "execution_count": 34,
+                    "execution_count": 47,
                     "metadata": {},
                     "output_type": "execute_result"
                 }
@@ -3953,7 +3951,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 14,
+            "execution_count": 48,
             "metadata": {},
             "outputs": [
                 {
@@ -3973,7 +3971,7 @@
                             "Name: 80+ y/o % of total pop, Length: 3140, dtype: float64"
                         ]
                     },
-                    "execution_count": 14,
+                    "execution_count": 48,
                     "metadata": {},
                     "output_type": "execute_result"
                 }
@@ -3984,7 +3982,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 15,
+            "execution_count": 49,
             "metadata": {},
             "outputs": [],
             "source": [
@@ -3994,7 +3992,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 16,
+            "execution_count": 50,
             "metadata": {},
             "outputs": [
                 {
@@ -4060,7 +4058,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 17,
+            "execution_count": 51,
             "metadata": {},
             "outputs": [
                 {
@@ -4078,7 +4076,7 @@
                         "\u001b[1;31mKeyError\u001b[0m: 'age'",
                         "\nThe above exception was the direct cause of the following exception:\n",
                         "\u001b[1;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
-                        "Cell \u001b[1;32mIn[17], line 7\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;66;03m#analisis multivariante\u001b[39;00m\n\u001b[0;32m      2\u001b[0m \u001b[38;5;66;03m#numerico-numerico\u001b[39;00m\n\u001b[0;32m      3\u001b[0m \n\u001b[0;32m      4\u001b[0m \u001b[38;5;66;03m#anycondition_prevalence. Esta variable representa la prevalencia de \"cualquier condición de salud crónica\". Esto la convierte en un indicador amplio y general del estado de salud de una población.\u001b[39;00m\n\u001b[0;32m      5\u001b[0m fig,axis\u001b[38;5;241m=\u001b[39m plt\u001b[38;5;241m.\u001b[39msubplots(\u001b[38;5;241m4\u001b[39m,\u001b[38;5;241m2\u001b[39m, figsize\u001b[38;5;241m=\u001b[39m(\u001b[38;5;241m10\u001b[39m,\u001b[38;5;241m20\u001b[39m))\n\u001b[1;32m----> 7\u001b[0m sns\u001b[38;5;241m.\u001b[39mregplot(ax \u001b[38;5;241m=\u001b[39m axis[\u001b[38;5;241m0\u001b[39m, \u001b[38;5;241m0\u001b[39m], data \u001b[38;5;241m=\u001b[39m df, x \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124manycondition_prevalence\u001b[39m\u001b[38;5;124m\"\u001b[39m, y \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mage\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m      8\u001b[0m sns\u001b[38;5;241m.\u001b[39mheatmap(df[[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mduration\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mage\u001b[39m\u001b[38;5;124m\"\u001b[39m]]\u001b[38;5;241m.\u001b[39mcorr(), annot \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mTrue\u001b[39;00m, fmt \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m.2f\u001b[39m\u001b[38;5;124m\"\u001b[39m, ax \u001b[38;5;241m=\u001b[39m axis[\u001b[38;5;241m1\u001b[39m, \u001b[38;5;241m0\u001b[39m], cbar \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mFalse\u001b[39;00m)\n\u001b[0;32m     10\u001b[0m sns\u001b[38;5;241m.\u001b[39mregplot(ax\u001b[38;5;241m=\u001b[39maxis[\u001b[38;5;241m0\u001b[39m,\u001b[38;5;241m1\u001b[39m],data\u001b[38;5;241m=\u001b[39mdf,x\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mduration\u001b[39m\u001b[38;5;124m\"\u001b[39m,y\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mcampaign\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
+                        "Cell \u001b[1;32mIn[51], line 7\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;66;03m#analisis multivariante\u001b[39;00m\n\u001b[0;32m      2\u001b[0m \u001b[38;5;66;03m#numerico-numerico\u001b[39;00m\n\u001b[0;32m      3\u001b[0m \n\u001b[0;32m      4\u001b[0m \u001b[38;5;66;03m#anycondition_prevalence. Esta variable representa la prevalencia de \"cualquier condición de salud crónica\". Esto la convierte en un indicador amplio y general del estado de salud de una población.\u001b[39;00m\n\u001b[0;32m      5\u001b[0m fig,axis\u001b[38;5;241m=\u001b[39m plt\u001b[38;5;241m.\u001b[39msubplots(\u001b[38;5;241m4\u001b[39m,\u001b[38;5;241m2\u001b[39m, figsize\u001b[38;5;241m=\u001b[39m(\u001b[38;5;241m10\u001b[39m,\u001b[38;5;241m20\u001b[39m))\n\u001b[1;32m----> 7\u001b[0m sns\u001b[38;5;241m.\u001b[39mregplot(ax \u001b[38;5;241m=\u001b[39m axis[\u001b[38;5;241m0\u001b[39m, \u001b[38;5;241m0\u001b[39m], data \u001b[38;5;241m=\u001b[39m df, x \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124manycondition_prevalence\u001b[39m\u001b[38;5;124m\"\u001b[39m, y \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mage\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m      8\u001b[0m sns\u001b[38;5;241m.\u001b[39mheatmap(df[[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mduration\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mage\u001b[39m\u001b[38;5;124m\"\u001b[39m]]\u001b[38;5;241m.\u001b[39mcorr(), annot \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mTrue\u001b[39;00m, fmt \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m.2f\u001b[39m\u001b[38;5;124m\"\u001b[39m, ax \u001b[38;5;241m=\u001b[39m axis[\u001b[38;5;241m1\u001b[39m, \u001b[38;5;241m0\u001b[39m], cbar \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mFalse\u001b[39;00m)\n\u001b[0;32m     10\u001b[0m sns\u001b[38;5;241m.\u001b[39mregplot(ax\u001b[38;5;241m=\u001b[39maxis[\u001b[38;5;241m0\u001b[39m,\u001b[38;5;241m1\u001b[39m],data\u001b[38;5;241m=\u001b[39mdf,x\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mduration\u001b[39m\u001b[38;5;124m\"\u001b[39m,y\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mcampaign\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
                         "File \u001b[1;32mc:\\Users\\valen\\anaconda3\\Lib\\site-packages\\seaborn\\regression.py:763\u001b[0m, in \u001b[0;36mregplot\u001b[1;34m(data, x, y, x_estimator, x_bins, x_ci, scatter, fit_reg, ci, n_boot, units, seed, order, logistic, lowess, robust, logx, x_partial, y_partial, truncate, dropna, x_jitter, y_jitter, label, color, marker, scatter_kws, line_kws, ax)\u001b[0m\n\u001b[0;32m    752\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mregplot\u001b[39m(\n\u001b[0;32m    753\u001b[0m     data\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mNone\u001b[39;00m, \u001b[38;5;241m*\u001b[39m, x\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mNone\u001b[39;00m, y\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mNone\u001b[39;00m,\n\u001b[0;32m    754\u001b[0m     x_estimator\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mNone\u001b[39;00m, x_bins\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mNone\u001b[39;00m, x_ci\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mci\u001b[39m\u001b[38;5;124m\"\u001b[39m,\n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m    760\u001b[0m     scatter_kws\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mNone\u001b[39;00m, line_kws\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mNone\u001b[39;00m, ax\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mNone\u001b[39;00m\n\u001b[0;32m    761\u001b[0m ):\n\u001b[1;32m--> 763\u001b[0m     plotter \u001b[38;5;241m=\u001b[39m _RegressionPlotter(x, y, data, x_estimator, x_bins, x_ci,\n\u001b[0;32m    764\u001b[0m                                  scatter, fit_reg, ci, n_boot, units, seed,\n\u001b[0;32m    765\u001b[0m                                  order, logistic, lowess, robust, logx,\n\u001b[0;32m    766\u001b[0m                                  x_partial, y_partial, truncate, dropna,\n\u001b[0;32m    767\u001b[0m                                  x_jitter, y_jitter, color, label)\n\u001b[0;32m    769\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m ax \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[0;32m    770\u001b[0m         ax \u001b[38;5;241m=\u001b[39m plt\u001b[38;5;241m.\u001b[39mgca()\n",
                         "File \u001b[1;32mc:\\Users\\valen\\anaconda3\\Lib\\site-packages\\seaborn\\regression.py:107\u001b[0m, in \u001b[0;36m_RegressionPlotter.__init__\u001b[1;34m(self, x, y, data, x_estimator, x_bins, x_ci, scatter, fit_reg, ci, n_boot, units, seed, order, logistic, lowess, robust, logx, x_partial, y_partial, truncate, dropna, x_jitter, y_jitter, color, label)\u001b[0m\n\u001b[0;32m    104\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mMutually exclusive regression options.\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m    106\u001b[0m \u001b[38;5;66;03m# Extract the data vals from the arguments or passed dataframe\u001b[39;00m\n\u001b[1;32m--> 107\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mestablish_variables(data, x\u001b[38;5;241m=\u001b[39mx, y\u001b[38;5;241m=\u001b[39my, units\u001b[38;5;241m=\u001b[39munits,\n\u001b[0;32m    108\u001b[0m                          x_partial\u001b[38;5;241m=\u001b[39mx_partial, y_partial\u001b[38;5;241m=\u001b[39my_partial)\n\u001b[0;32m    110\u001b[0m \u001b[38;5;66;03m# Drop null observations\u001b[39;00m\n\u001b[0;32m    111\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m dropna:\n",
                         "File \u001b[1;32mc:\\Users\\valen\\anaconda3\\Lib\\site-packages\\seaborn\\regression.py:44\u001b[0m, in \u001b[0;36m_LinearPlotter.establish_variables\u001b[1;34m(self, data, **kws)\u001b[0m\n\u001b[0;32m     42\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m var, val \u001b[38;5;129;01min\u001b[39;00m kws\u001b[38;5;241m.\u001b[39mitems():\n\u001b[0;32m     43\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28misinstance\u001b[39m(val, \u001b[38;5;28mstr\u001b[39m):\n\u001b[1;32m---> 44\u001b[0m         vector \u001b[38;5;241m=\u001b[39m data[val]\n\u001b[0;32m     45\u001b[0m     \u001b[38;5;28;01melif\u001b[39;00m \u001b[38;5;28misinstance\u001b[39m(val, \u001b[38;5;28mlist\u001b[39m):\n\u001b[0;32m     46\u001b[0m         vector \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39masarray(val)\n",
@@ -4120,7 +4118,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 19,
+            "execution_count": null,
             "metadata": {},
             "outputs": [],
             "source": [
@@ -4131,7 +4129,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 20,
+            "execution_count": null,
             "metadata": {},
             "outputs": [],
             "source": [
@@ -4140,7 +4138,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 21,
+            "execution_count": null,
             "metadata": {},
             "outputs": [
                 {
@@ -4161,7 +4159,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 22,
+            "execution_count": null,
             "metadata": {},
             "outputs": [],
             "source": [
@@ -4171,7 +4169,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 23,
+            "execution_count": null,
             "metadata": {},
             "outputs": [
                 {
@@ -4192,7 +4190,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 24,
+            "execution_count": null,
             "metadata": {},
             "outputs": [
                 {
@@ -4220,7 +4218,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 25,
+            "execution_count": null,
             "metadata": {},
             "outputs": [
                 {
@@ -4240,7 +4238,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 26,
+            "execution_count": null,
             "metadata": {},
             "outputs": [
                 {
@@ -4263,7 +4261,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 27,
+            "execution_count": null,
             "metadata": {},
             "outputs": [
                 {
@@ -4667,7 +4665,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 28,
+            "execution_count": null,
             "metadata": {},
             "outputs": [],
             "source": [
@@ -4685,7 +4683,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 29,
+            "execution_count": null,
             "metadata": {},
             "outputs": [
                 {
@@ -5120,7 +5118,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 30,
+            "execution_count": null,
             "metadata": {},
             "outputs": [],
             "source": [
@@ -5131,7 +5129,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 31,
+            "execution_count": null,
             "metadata": {},
             "outputs": [
                 {
@@ -5153,8 +5151,13 @@
             ]
         },
         {
+            "cell_type": "markdown",
+            "metadata": {},
+            "source": []
+        },
+        {
             "cell_type": "code",
-            "execution_count": 32,
+            "execution_count": null,
             "metadata": {},
             "outputs": [
                 {
@@ -5173,7 +5176,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 33,
+            "execution_count": null,
             "metadata": {},
             "outputs": [
                 {
